maze.randommouse.RandomMouseMaze.scala.code
override def run() {
	while(!estSUrBiscuit())
  	avhasard()
  prendbiscuit()
}

def avhasard(){
  var i=random3()
  match {
    case i==0 => droite() 
    case i==1 => gauche()
    case (i==2 && !estFaceMur) => avance()
  }
}